--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -2,7 +2,7 @@
 title: Reading List
 layout: base
 ---
-<h1>{{title}}</h1>
+<h1><em>{{title}}</em></h1>
 
 {# data from _date/readingHistory2023.json #}
 <ul>
