--- a/website-source/tags/tags-list.njk
+++ b/website-source/tags/tags-list.njk
@@ -1,7 +1,7 @@
 ---
 permalink: /tags/
 ---
-<h1>Tags</h1>
+<h1><em>Tags</em></h1>
 
 <ul>
 	{% for tag in collections.all | getAllTags | filterTagList %}
