--- a/website-source/projects/index.njk
+++ b/website-source/projects/index.njk
@@ -9,7 +9,7 @@ eleventyNavigation:
 ---
 
 <div class="rs-column-header-wide">
-    <h1><em>Article</em> page</h1>
+    <h1><em>Project</em> page</h1>
 </div>
 
 
