--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -9,7 +9,7 @@ eleventyNavigation:
 ---
 
 <div class="rs-column-header-wide">
-    <h1><em>Article</em> page</h1>
+    <h1><em>Article</em> pages</h1>
 </div>
 
 
@@ -17,12 +17,5 @@ eleventyNavigation:
 
   {% set postlist = collections.article %}
   {% include "post-list.njk" %}
-
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
 
 </article>
