More reading links

--- a/website-source/_includes/_layouts/base.njk
+++ b/website-source/_includes/_layouts/base.njk
@@ -88,6 +88,14 @@
                         
                     </ul>
                 </nav>
+
+                <div>
+                    <p>Mastadon</p>
+                    <p>Dark mode (cloud with sun or moon)
+                    </p>
+                    <p>Email?</p>
+                    <p>RSS</p>
+                </div>
             </header>
     
             <main id="main">
@@ -118,6 +126,9 @@
                             {% endfor %}
                         </ul>
                     </nav>
+
+                    <p>Built with 11ty</p>
+                    <p>Hundos</p>
                     
                     <div class="rs-tac">
                         <p>Company number: SC683321</p>
