--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -5,13 +5,13 @@ override:tags: []
 override:layout: base
 eleventyNavigation:
   key: <article>
-  order: 2
+  order: 3
 ---
 
 <div class="rs-column-header-wide">
-    <h1><em>Article</em> pages</h1>
+  <h1>
+    <em>Article</em> pages</h1>
 </div>
-
 
 <article class="rs-column flow">
 
