--- a/website-source/projects/index.njk
+++ b/website-source/projects/index.njk
@@ -5,21 +5,21 @@ override:tags: []
 override:layout: base
 eleventyNavigation:
   key: <code>
-  order: 4
+  order: 2
 ---
 
 <div class="rs-column-header-wide">
-    <h1><em>Project</em> page</h1>
+  <h1>
+    <em>Project</em> page</h1>
 </div>
-
 
 <article class="rs-column flow">
 
-{% set postlist = collections.projects %}
+  {% set postlist = collections.projects %}
 
-{% include "post-list.njk" %}
+  {% include "post-list.njk" %}
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem voluptatum distinctio veniam recusandae adipisci quae nulla. Eaque, molestiae iusto fugit quo quos impedit tempora commodi ex accusamus, quibusdam ea voluptates.</p>
