Got esm 11ty v3 working

--- a/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
+++ b/website-source/article/2023-11-20-rising-sky-website-version-2/index.njk
@@ -139,6 +139,6 @@ eleventyConfig.addFilter("filterTagList", function filterTagList(tags) {
 
 <!-- Living documents? Updated resources and summaries? Or separate posts? -->
 
-{% image "./images/ben-me-beach.jpg", "rs-image", "Me up a mountain" %}
+{# {% image "./images/ben-me-beach.jpg", "rs-image", "Me up a mountain" %} #}
 
 {# <img src="./images/patrick-grey-mountain.jpg" alt="Me up a mountain"> #}
