--- a/website-source/feed/feed.njk
+++ b/website-source/feed/feed.njk
@@ -4,7 +4,7 @@ permalink: /feed/feed.xml
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.language }}">
-	<title>{{ metadata.title }}</title>
+	{# <title>{{ metadata.title }}</title>
 	<subtitle>{{ metadata.description }}</subtitle>
 	<link href="{{ permalink | htmlBaseUrl(metadata.url) }}" rel="self"/>
 	<link href="{{ metadata.url | addPathPrefixToFullUrl }}"/>
@@ -33,5 +33,5 @@ permalink: /feed/feed.xml
 			<id>{{ absolutePostUrl }}</id>
 			<content type="html">{{ post.templateContent | transformWithHtmlBase(absolutePostUrl, post.url) }}</content>
 		</entry>
-	{%- endfor %}
+	{%- endfor %} #}
 </feed>
