--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -91,7 +91,7 @@ jsFiles: []
         <div class="rs-full-height">
             <header>
                 <a href="/" class="rs-logo">
-                    <span class="visually-hidden">Go to the home page.</span>{% include "images/logo/rising-sky-logo-rubik.svg" %}</a>
+                    <span class="visually-hidden">Go to the home page.</span>{% include buildURL+"images/logo/rising-sky-logo-rubik.svg" %}</a>
                 <nav>
                     {# role=list not needed as in nav tag: https://developer.mozilla.org/en-US/docs/Web/CSS/list-style#accessibility_concerns #}
                     <ul>
@@ -139,7 +139,7 @@ jsFiles: []
 
             <footer id="footer">
 
-                {% include buildURL+"images/footer/footer-cat.svg" %}
+                {# {% include buildURL+"images/footer/footer-cat.svg" %} #}
 
                 <div>
                     <nav>
