--- a/website-source/article/index.njk
+++ b/website-source/article/index.njk
@@ -1,14 +1,12 @@
 ---
 title: Articles
 permalink: article/
-override:tags: []
-override:layout: base
 eleventyNavigation:
   key: <article>
   order: 3
 ---
 
-<div class="rs-column-header-wide">
+{# <div class="rs-column-header-wide">
   <h1>
     <em>Article</em> pages</h1>
 </div>
@@ -18,4 +16,4 @@ eleventyNavigation:
   {% set postlist = collections.article %}
   {% include "post-list.njk" %}
 
-</article>
+</article> #}
