--- a/website-source/reading-list.njk
+++ b/website-source/reading-list.njk
@@ -2,15 +2,17 @@
 title: Reading List
 layout: base
 ---
-<h1><em>{{title}}</em></h1>
+<h1>
+    <em>{{title}}</em>
+</h1>
 
 {# data from _date/readingHistory2023.json #}
 <ul>
-    {% for read in readingHistory2023 | readingSorted %}
+    {# {% for read in readingHistory2023 | readingSorted %}
         <li>
             <a href="{{read.url}}">{{read.title}}</a>
         </li>
-    {% endfor %}
+    {% endfor %} #}
 </ul>
 
 {# Listen History
