--- a/website-source/small/2023-11-21-11ty-highlight-top-level-nav.njk
+++ b/website-source/small/2023-11-21-11ty-highlight-top-level-nav.njk
@@ -2,7 +2,7 @@
 title: Highlight the current top level navigation
 published: 2023-11-21
 tags: ["11ty", "navigation"]
-draft: true
+draft: false
 ---
 
 {% if draft %}
