--- a/website-source/small/2024-01-23-tagged-template-literals.njk
+++ b/website-source/small/2024-01-23-tagged-template-literals.njk
@@ -3,7 +3,7 @@ title: TIL about Tagged Template string literals and didn't use them...
 published: 2024-01-23
 updated: 2024-01-23
 tags: ["javascript"]
-draft: true
+draft: false
 ---
 <p>I wanted a list of URL strings that I could retrieve and insert dynamic values at certain points in that string (this is JavaScript).</p>
 <p>My mind went to string literals but they need the dynamic elements set at the time of declaration.</p>
