--- a/website-source/small/2024-01-24-git-fetch-vs-pull.njk
+++ b/website-source/small/2024-01-24-git-fetch-vs-pull.njk
@@ -3,7 +3,7 @@ title: TIL about Git Fetch vs Pull commands
 published: 2024-01-24
 updated: 2024-01-24
 tags: ["git"]
-draft: true
+draft: false
 ---
 <p>https://www.freecodecamp.org/news/git-fetch-vs-pull/</p>
 <p>Fetch gets metadata about potenital changes without downloading the actual files (which may overwrite your current files)</p>
