--- a/website-source/article/2023-11-23-template.njk
+++ b/website-source/article/2023-11-23-template.njk
@@ -4,7 +4,7 @@
   published: 2023-11-20
   updated: 2023-11-22
   tags: 
-  draft: true
+  draft: false
 ---
 
 <p>Article template. Set draft to true when ready to publish.</p>
