--- a/website-source/small/2023-11-21-template.njk
+++ b/website-source/small/2023-11-21-template.njk
@@ -3,6 +3,6 @@ title: Template
 published: 2023-11-23
 updated: 2023-11-24
 tags: 
-draft: true
+draft: false
 ---
 <p>Set draft to false when ready</p>
