--- a/website-source/small/2023-11-23-i-was-nesting-lists-wrong.njk
+++ b/website-source/small/2023-11-23-i-was-nesting-lists-wrong.njk
@@ -3,7 +3,7 @@ title: I was nesting lists wrong!
 published: 2023-11-23
 updated: 2023-11-24
 tags: ["accessibility", "html"]
-draft: true
+draft: false
 ---
 
 {# https://www.hoeser.dev/blog/2023-02-01-syntax-highlight/ #}
