--- a/website-source/small/2024-01-07-transition-stops.njk
+++ b/website-source/small/2024-01-07-transition-stops.njk
@@ -3,7 +3,7 @@ title: TIL you can transition stops in an SVG linear gradient
 published: 2024-01-07
 updated: 2024-01-07
 tags: ["svg", "html"]
-draft: true
+draft: false
 ---
 
 {# https://www.hoeser.dev/blog/2023-02-01-syntax-highlight/ #}
